# rust-api

./: Cargo.toml
src/: config.rs  db.rs  dto.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handler/: auth.rs  user.rs
src/helper/mailer/: mail.rs  mailer.rs  mod.rs
src/utlis/: password.rs  token.rs
