[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.1"
axum = "0.8.4"
async-trait = "0.1.72"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = {version = "0.10.0", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors","trace"] }
tracing-subscriber = "0.3.19"
time = "0.3"
lettre = "0.11.7"
tracing = "0.1.41"
